integration-tests/tests/errors/errors.ejs
<!DOCTYPE html>
<html lang="en">
<head>
	<meta charset="UTF-8">
	<title>Errors test</title>

	<%- renderAgent({debug: true}) %>
</head>
<body>
	<h1>FETCH</h1>
	<script>
		fetch('/some-data').then(response => response.json()).then(console.log);
	</script>
	</body>
</html>
